injeção de dependencia koin

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,10 @@ dependencies {
     api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
 
+    // Koin
+    implementation "io.insert-koin:koin-core:3.2.0"
+    implementation "io.insert-koin:koin-android:3.2.0"
+    implementation "io.insert-koin:koin-androidx-compose:3.2.0"
+    implementation "io.insert-koin:koin-androidx-navigation:3.2.0"
+    testImplementation "io.insert-koin:koin-test-junit4:3.2.0"
 }
